--- a/README
+++ b/README
@@ -1,15 +1,25 @@
-pod2text ExtUtils::ModuleMaker::PBP.pm > README
+README for Perl extension ExtUtils::ModuleMaker::PBP
 
-If this is still here it means the programmer was too lazy to create the readme file.
+INSTALLATION
 
-You can create it now by using the command shown above from this directory.
+To install this module, run the following commands:
 
-At the very least you should be able to use this set of instructions
-to install the module...
-
-perl Makefile.PL
-make
-make test
-make install
+    perl Makefile.PL
+    make
+    make test
+    make install
 
 If you are on a windows box you should use 'nmake' rather than 'make'.
+
+DEPENDENCIES
+
+ExtUtils-ModuleMaker, version 0.39 or later.  For testing, Test-Simple, 
+version 0.44 or later.
+
+COPYRIGHT AND LICENCE
+
+Copyright (C) 2005, James E Keenan
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
