--- a/Todo
+++ b/Todo
@@ -1,5 +1,5 @@
 TODO list for Perl module ExtUtils::ModuleMaker::PBP
 
-- Nothing yet
+- Implement 'use version' style for $self->{VERSION}, e.g., in Changes.
 
 
