By invoking $self->SUPER::default_values, I was then able to assign the value 1 to $self->{COMPACT}, which means PBP now, by default, creates a compact top-level directory.

--- a/Todo
+++ b/Todo
@@ -3,6 +3,6 @@ TODO list for Perl module ExtUtils::ModuleMaker::PBP
 - Implement 'use version' style for $self->{VERSION}, e.g., in Changes.
 - Module::Starter::PBP uses 2-digit test numbers beginning with 00.
 - Module::Starter::PBP defaults to compact top-level directory;  EU::MM does
-  not.  Have to fix.
+  not.  Have to fix.  DONE:  Tue Sep  6 19:12:25 EDT 2005
 
 
