Upped version number to 0.06.  Changed required ExtUtils::ModuleMaker version number in Makefile.PL to 0.41.  Changed date to September 19, 2005. CPAN Upload.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl module ExtUtils::ModuleMaker::PBP
 
+0.06 Mon Sep 19 18:31:53 EDT 2005
+    - Only change:  In Makefile.PL, changed required version of
+      ExtUtils::ModuleMaker from 0.40 to 0.41 (due to bug fix in
+ExtUtils::ModuleMaker).
+
+0.05 Sun Sep 19          2005
+    - First CPAN upload, tied to ExtUtils::ModuleMaker version 0.40.
+
 0.01 Mon Sep  5 19:39:49 2005
     - original version; created by ExtUtils::ModuleMaker 0.39
 
