--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl module ExtUtils::ModuleMaker::PBP
 
+0.08 Thu Sep 29 19:38:09 EDT 2005
+    - Corrected error in test suite.  All files had incorrect number of
+      skipped tests.
+
+0.07     Sep 28 2005
+
 0.06 Mon Sep 19 18:31:53 EDT 2005
     - Only change:  In Makefile.PL, changed required version of
       ExtUtils::ModuleMaker from 0.40 to 0.41 (due to bug fix in
